@@ -1,3 +1,7 @@
+May 28, 2003
+
+* FIXED: Pass long parameters using SQLPutData().  Fabien Toscado.
+
 May 3, 2003
 
 * PORT: clean compilation on GCC 3.3
